fixed device selector icon not showing bug

--- a/frontend/builder/src/components/DeviceSelector.module.css
+++ b/frontend/builder/src/components/DeviceSelector.module.css
@@ -26,7 +26,3 @@
     margin-left: 22px;
     cursor: pointer;
 }
-
-.container button span:hover {
-    color: #0693E3;
-}
